# filepilot-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FilePilot.spec  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  check_syntax.py  pyproject.toml  read_files.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  desktop_bug.yml  feature_request.md  mcp_agent_workflow.yml
.github/workflows/: ci.yml
docs/: AI-PROVIDERS.md  ARCHITECTURE.md  AUTO-UPDATE.md  BUILD.md  FEATURES.md  MCP-CLIENTS.md  MCP-WORKFLOWS.md  MCP.md  PLUGIN_SDK.md  PROMOTION.md  README.md  ROADMAP.md  USE-CASES.md
filepilot/: __init__.py  __main__.py  app.py  auto_start.py  cli.py  i18n.py  log.py  main.py  updater.py
filepilot/ai/: __init__.py  base.py  cloud_ai.py  local_ai.py  summarizer.py
filepilot/core/: __init__.py  app_state.py  chat_assistant.py  cloud_sync.py  config.py  duplicate_finder.py  embeddings.py  errors.py  event_bus.py  file_operations.py  file_organizer.py  file_scanner.py  file_snapshot.py  file_watcher.py  index_db.py  indexer.py  plugin_registry.py  plugin_system.py  search_cache.py  service_container.py  tag_manager.py  tag_rules.py  task_queue.py  task_scheduler.py  worker.py
filepilot/extractors/: __init__.py  code_extractor.py  docx_extractor.py  example_plugin.py  image_extractor.py  markdown_extractor.py  ocr_extractor.py  pdf_extractor.py  pptx_extractor.py  text_extraction.py  xlsx_extractor.py
filepilot/mcp/: __init__.py  audit.py  security.py  server.py  tools.py  workflows.py
filepilot/resources/: app.icns
filepilot/styles/: __init__.py  manager.py
filepilot/styles/themes/: dark.qss  high_contrast.qss  light.qss
filepilot/ui/: __init__.py  base_panel.py  chat_panel.py  dashboard_panel.py  directory_tree.py  duplicates_panel.py  favorites_panel.py  file_browser.py  file_stats_panel.py  index_panel.py  main_window.py  notification.py  notification_history.py  onboarding_dialog.py  organize_panel.py  plugin_manager_panel.py  preview_panel.py  search_panel.py  settings_dialog.py  shortcut_editor.py  summary_panel.py  tabbed_browser.py  tag_cloud.py  tags_panel.py  tray.py
filepilot/utils/: __init__.py  file_utils.py
scripts/: build.sh  build_appimage.sh  build_installer.ps1  build_macos.sh  filepilot-installer.iss  push_to_github.py  verify_release_assets.py
tests/: conftest.py  test_ai_base.py  test_app.py  test_app_state.py  test_auto_start.py  test_base_panel.py  test_chat_assistant.py  test_chat_panel.py  test_cli.py  test_cloud_ai.py  test_cloud_sync.py  test_code_extractor.py  test_config.py  test_dashboard_panel.py  test_directory_tree.py  test_docx_extractor.py  test_duplicates_panel.py  test_embeddings.py  test_errors.py  test_event_bus.py  test_favorites_panel.py  test_file_browser.py  test_file_operations.py  test_file_organizer.py  test_file_scanner.py  test_file_snapshot.py  test_file_stats_panel.py  test_file_utils.py  test_file_watcher.py  test_i18n_functions.py  test_i18n_recent_keys.py  test_image_extractor.py  test_index_db.py  test_index_panel.py  test_indexer.py  test_integration.py  test_local_ai.py  test_log.py  test_main_entrypoint.py  test_main_window_navigation.py  (+38 more)
