[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "filepilot-ai"
version = "0.1.0"
description = "Smart File Manager — Automatically organize, categorize, and search your local files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "Whoosh>=2.7.4",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "python-magic>=0.4.27",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "markdown>=3.5.0",
]

[tool.setuptools.packages.find]
include = ["filepilot*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
