[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filepilot-ai"
version = "0.8.2"
description = "Local-first AI file manager for scanning, searching, deduplicating, summarizing, and organizing files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "cuiheng511"},
]
license = {text = "MIT"}
keywords = [
    "file-manager",
    "file-organization",
    "file-search",
    "duplicate-detection",
    "local-first",
    "privacy-first",
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "ai-agents",
    "claude-code",
    "codex",
    "cursor",
    "desktop-app",
    "qt6",
    "pyside6",
    "ai",
    "productivity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities",
]
dependencies = [
    "Whoosh>=2.7.4",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "markdown>=3.5.0",
    "keyring>=24.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/cuiheng511/filepilot-ai"
Repository = "https://github.com/cuiheng511/filepilot-ai.git"
Documentation = "https://github.com/cuiheng511/filepilot-ai#readme"
Changelog = "https://github.com/cuiheng511/filepilot-ai/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/cuiheng511/filepilot-ai/issues"

[project.scripts]
filepilot = "filepilot.cli:main"
filepilot-mcp = "filepilot.mcp.server:main"

[project.gui-scripts]
filepilot-gui = "filepilot.main:main"

[tool.setuptools.packages.find]
include = ["filepilot*"]

[tool.setuptools.package-data]
filepilot = [
    "resources/*.ico",
    "resources/*.png",
    "styles/themes/*.qss",
]

[project.optional-dependencies]
desktop = [
    "PySide6>=6.6.0",
    "send2trash>=1.8.0",
    "watchdog>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=5.0.0",
    "PySide6>=6.6.0",
    "send2trash>=1.8.0",
    "watchdog>=6.0.0",
]
dev = [
    "ruff>=0.15.12",
    "mypy>=1.13.0",
    "pre-commit>=3.5.0",
]
mcp = [
    "mcp>=1.8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true
exclude = [
    ".git",
    ".kilo",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "F",     # pyflakes (errors)
    "E", "W",  # pycodestyle (convention + warnings)
    "I",     # isort (import order)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize for py310+)
    "B",     # flake8-bugbear (bug detection)
    "SIM",   # flake8-simplify (code simplification)
    "C4",    # flake8-comprehensions
    "T20",   # flake8-print (catch debug print() statements)
    "PT",    # flake8-pytest (pytest best practices)
    "RUF100",  # detect unused noqa directives
]
ignore = [
    "E501",  # line-length handled by formatter
    "UP007",  # allow Union type syntax (not just X|Y for now)
    "B028",   # allow stacklevel warning
    "SIM108",  # allow simple if-else instead of ternary
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"check_syntax.py" = ["T201"]
"cli.py" = ["T201"]
"read_files.py" = ["T201"]
"scripts/*.py" = ["T201"]
"tests/*.py" = [
    "T20",   # allow print() in tests
    "N802",  # allow test function names like test_MyFeature
    "PT009", # allow unittest-style assert
]
"filepilot/ui/main_window.py" = [
    "N802",  # Qt event overrides (resizeEvent, dragEnterEvent, etc.)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["filepilot"]

[tool.coverage.run]
source = ["filepilot"]
omit = ["*/tests/*", "*/__init__.py", "*/.venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 67.5
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
files = ["filepilot"]
warn_unused_ignores = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["filepilot.ui.*", "filepilot.styles.*"]
disable_error_code = ["attr-defined"]


